parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__f-string-literals-3.snap
---
source: parser/src/lexer/mod.rs
description: "f\"\""
---
[
    Token {
        kind: FStringStart,
        value: Str(
            "f\"",
        ),
        start: 0,
        end: 2,
    },
    Token {
        kind: FStringEnd,
        value: Str(
            "\"",
        ),
        start: 2,
        end: 3,
    },
]
