parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__f-string-literals-4.snap
---
source: parser/src/lexer/mod.rs
description: "a = f\"hello\""
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: Assign,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: FStringStart,
        value: Str(
            "f\"",
        ),
        start: 4,
        end: 6,
    },
    Token {
        kind: FStringMiddle,
        value: Str(
            "hello",
        ),
        start: 6,
        end: 11,
    },
    Token {
        kind: FStringEnd,
        value: Str(
            "\"",
        ),
        start: 11,
        end: 12,
    },
]
