parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__f-string-literals-8.snap
---
source: parser/src/lexer/mod.rs
description: "f\"oh_{{hey}}\""
---
[
    Token {
        kind: FStringStart,
        value: Str(
            "f\"",
        ),
        start: 0,
        end: 2,
    },
    Token {
        kind: FStringMiddle,
        value: Str(
            "oh_{{hey}}",
        ),
        start: 2,
        end: 12,
    },
    Token {
        kind: FStringEnd,
        value: Str(
            "\"",
        ),
        start: 12,
        end: 13,
    },
]
