parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__f-string-literals-9.snap
---
source: parser/src/lexer/lexer.rs
description: "f'a' 'c'"
---
[
    Token {
        kind: FStringStart,
        value: Str(
            "f'",
        ),
        start: 0,
        end: 2,
    },
    Token {
        kind: FStringMiddle,
        value: Str(
            "a",
        ),
        start: 2,
        end: 3,
    },
    Token {
        kind: FStringEnd,
        value: Str(
            "'",
        ),
        start: 3,
        end: 4,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "'c'",
        ),
        start: 5,
        end: 8,
    },
]
