parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__identifiers-2.snap
---
source: parser/src/lexer/lexer.rs
description: _a
---
[
    Token {
        kind: Identifier,
        value: Str(
            "_a",
        ),
        start: 0,
        end: 2,
    },
]
