parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__identifiers-3.snap
---
source: parser/src/lexer/mod.rs
description: a_
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a_",
        ),
        start: 0,
        end: 2,
    },
]
