parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__identifiers-4.snap
---
source: parser/src/lexer/mod.rs
description: a_a_a
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a_a_a",
        ),
        start: 0,
        end: 5,
    },
]
